starting var usage

--- a/index.html
+++ b/index.html
@@ -17,4 +17,6 @@
     <!--External file which is the best method to add js.-->
     <script src="script.js"></script>
     
+    <!--View your results in the Chrome browser-->
+    
 </html>
