--- a/index.html
+++ b/index.html
@@ -8,7 +8,15 @@
     <body>
         <h1>Section 2: JavaScript Language Basics</h1>
     </body>
-    
+    <!--Basic Operators
+	<	Less than
+	>	Greater than
+	<=	Less than or Equal to
+	>=	Greater than or Equal to
+	==	Equal to
+	!=	Not Equal to
+   
+    <!--js is a front end language-->
     <!--js inline example-->
     <!--<script>
 		console.log("Time to get paid!");
