Tennis Arcade Game

--- a/JS2018/test2.html
+++ b/JS2018/test2.html
@@ -7,7 +7,7 @@
 
 <body>
 <h1>
-	Review of working with conditionals, loops, operaters and functions.
+	Review of working with conditionals, loops, operators and functions.
 </h1>
 
 <h2>
@@ -20,6 +20,7 @@
 		<li>Write 2 do while loops</li>
 		<li>Do and array and add items to it</li>
 		<li>Write 10 functions</li>
+		<li>Do 5 logic operators
 	</ol>
 </h2>
 
