Learning DOM Manipulation

--- a/JS2018/dom.html
+++ b/JS2018/dom.html
@@ -3,11 +3,22 @@
 <head>
 <meta charset="UTF-8">
 <title>DOM Manipulation</title>
+	<link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
 </head>
 
 <body>
-	<h1>Manipulating DOM</h1>
+	<h1 id="title">Manipulating The DOM</h1>
 	
+	<div id="teams">The Teams.</div>
+	
+	<h2 id="finish">2018 Predicted Order of Finish.
+		<div id="finish2">
+			1. Los Angeles Rams<br>
+			2. San Francisco 49ers<br>
+			3. Seattle Seahawks<br>
+			4. Arizona Cardinals
+		</div>
+	</h2>
 	
 	<script src="dom.js"></script>
 </body>
