--- a/JS2018/dialog.html
+++ b/JS2018/dialog.html
@@ -7,7 +7,7 @@
 </head>
 
 <body>
-	<h1 id="title">Using Alert, Prompt and Confrirm</h1>
+	<h1 id="title">Using Alert, Prompt and Confirm.</h1>
 	
 	
 	
