--- a/JS2018/transfer.html
+++ b/JS2018/transfer.html
@@ -19,15 +19,21 @@
 		
 	</style>
 
-<body onclick="on_body_click();">
+<body>
+	<header>
 	<h1>Javascript Basics</h1>
-	<h1>Events</h1>
-	<div id="main">
-		<div id="message"></div>
-		<input type="button" id="reset" value="Reset message">
-		<input id="infield" type="text"><br>
-	</div>
+	<h1>Networking</h1>
+		<input type="button" onclick="getData(data);" value="Get Data">
+	</header>
 	
-	<script src="events.js"></script>
+	<section class="main">
+		<article id="article_1"></article>
+		<article id="article_2"></article>
+		<article id="article_3"></article>
+	</section>
+	<footer>
+	</footer>
+	
+	<script src="transfer.js"></script>
 </body>
 </html>
